# finny

./: Cargo.toml  README.md  example.config.yml
config/: config.yml
src/: config.rs  lib.rs  main.rs  message.rs  parse.rs  parser.rs  process.rs  record.rs  tables.rs  viewer.rs  wrapper.rs
